@@ -23,3 +23,6 @@ VIDEO_MODE=$(VIDEO_MODE_GTK)
 # All images that include cdebconf should include symbols needed by these
 # plugins.
 EXTRAUDEBS += cdebconf-gtk-entropy
+
+# Build images for ChromeOS devices
+DEPTHCHARGE = y
