@@ -10,3 +10,6 @@ BOOT_SCREEN_DIR = $(NETBOOT_PATH)/boot-screens/
 MANIFEST-NETBOOT_DIR = "PXE boot directory for tftp server"
 MANIFEST-NETBOOT_TAR = "tarball of PXE boot directory"
 MANIFEST-MINIISO = "tiny CD image that boots the netboot installer"
+
+# Build images for ChromeOS devices
+DEPTHCHARGE = y
