@@ -23,6 +23,9 @@ VIDEO_MODE=$(VIDEO_MODE_GTK)
 # plugins.
 EXTRAUDEBS += cdebconf-gtk-entropy
 
+# Build images for ChromeOS devices
+DEPTHCHARGE = y
+
 IMAGE_SIZE = 200000
 
 .PHONY: netboot_images_concatenateable
