@@ -8,6 +8,9 @@ MANIFEST-NETBOOT_DIR = "PXE boot directory for tftp server"
 MANIFEST-NETBOOT_TAR = "tarball of PXE boot directory"
 MANIFEST-MINIISO = "tiny CD image that boots the netboot installer"
 
+# Build images for ChromeOS devices
+DEPTHCHARGE = y
+
 IMAGE_SIZE = 150000
 
 .PHONY: netboot_images_concatenateable
