@@ -437,6 +437,33 @@ arch_netboot_dir: x86_syslinux x86_grub_efi
 		> $(TEMP_NETBOOT_DIR)/$(NETBOOT_PATH)/grub/grub.cfg; \
 	fi
 
+	if [ "$(DEPTHCHARGE)" = y ]; then \
+		set -e; \
+		mkdir -p $(TEMP_NETBOOT_DIR)/depthcharge; \
+		depthchargectl build -v \
+			--board amd64-generic \
+			--kernel-release $(KERNELVERSION) \
+			--kernel $(TEMP_NETBOOT_DIR)/$(NETBOOT_PATH)/linux \
+			--initramfs $(TEMP_NETBOOT_DIR)/$(NETBOOT_PATH)/initrd.gz \
+			--root none \
+			--kernel-cmdline "--- quiet" \
+			--output $(TEMP_NETBOOT_DIR)/depthcharge/kernel.img; \
+		dd 2>/dev/null \
+			if=/dev/zero \
+			of=$(TEMP_NETBOOT_DIR)/depthcharge/disk.img \
+			bs=1k seek=514k count=1; \
+		printf "%s\n" \
+			"label: gpt" \
+			"start=1M, size=512M, type=FE3A2A5D-4F32-41A7-B725-ACCC3285A309" \
+			| sfdisk $(TEMP_NETBOOT_DIR)/depthcharge/disk.img; \
+		depthchargectl write -v \
+			--target $(TEMP_NETBOOT_DIR)/depthcharge/disk.img \
+			$(TEMP_NETBOOT_DIR)/depthcharge/kernel.img; \
+		depthchargectl bless -v -i 1 $(TEMP_NETBOOT_DIR)/depthcharge/disk.img; \
+		gzip -9nf $(TEMP_NETBOOT_DIR)/depthcharge/kernel.img; \
+		gzip -9nf $(TEMP_NETBOOT_DIR)/depthcharge/disk.img; \
+	fi
+
 .PHONY: xen_config
 xen_config:
 	sed -e "s/@ARCH@/$(ARCH)/g" \
