@@ -12,6 +12,9 @@ debian-installer (2022XXXX) UNRELEASED; urgency=medium
   * Add ka.utf with needed characters for Georgian language, to fix broken
     rendering in text installer. Closes: #1017435
 
+  [ Alper Nebi Yasak ]
+  * [amd64, arm64] Build netboot images for ChromeOS devices
+
  -- Samuel Thibault <sthibault@debian.org>  Sat, 17 Sep 2022 23:35:03 +0200
 
 debian-installer (20220914) unstable; urgency=medium
